--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <a href="https://www.instagram.com/kisselenko" class="social-button instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
             <a href="https://www.youtube.com/@kisselenkolilia" class="social-button youtube" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
             <a href="https://pin.it/HlalDQLXI" class="social-button pinterest" target="_blank"><i class="fab fa-pinterest-p"></i> Pinterest</a>
-            <a href="https://www.facebook.com/LiliaKisselenko" class="social-button facebook" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+            <a href="https://wa.me/79810337548" class="social-button whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         </div>
         
         <!-- Контактная информация -->
