--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 </a>
             </div>
             <div class="contacts">
-                +7 (812) 271 25 52<br>
-                +7 (812) 274 18 76<br>
+                <a href="tel:+78122712552">+7 (812) 271 25 52</a><br>
+                <a href="tel:+79810337548">+7 (981) 033 75 48</a><br>
                 <a href="mailto:fashion@kisselenko.com">e-mail: fashion@kisselenko.com</a>
             </div>
         </div>
